Added Employee Portal for CRUD and added Menu for customer to view.

--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<IS_BartenderAppProject_MV.Models.Drink>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Employee Portal";
 }
 
 <h1>Index</h1>
