--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Shared/_Layout.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Shared/_Layout.cshtml
@@ -25,10 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Login/Signup</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Drink" asp-action="Index">View Drinks</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Drink" asp-action="Index">EmployeePortal</a>
                         </li>
                     </ul>
                 </div>
