--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Home/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome! Click Here to Order! </h1>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome to Moe's Bar! </h1>
+        <div class="btn btn-primary">
+            <a class="nav-link text-white" asp-area="" asp-controller="Drink" asp-action="Menu">View & Order Drinks</a>
+        </div>
+    </div>
