--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Employee Portal";
 }
 
-<h1>Index</h1>
+    <h1>Employee Portal</h1>
 
 <p>
     <a asp-action="Upsert">Create New</a>
