--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
@@ -4,11 +4,18 @@
     ViewData["Title"] = "Employee Portal";
 }
 
-    <h1>Employee Portal</h1>
+<h1>Employee Portal</h1>
 
-<p>
-    <a asp-action="Upsert">Create New</a>
-</p>
+<div class="btn btn-primary">
+    <a class="nav-link text-white" asp-action="Upsert">Add New Drink to Menu</a>
+</div>
+
+<div class="btn btn-success">
+    <a class="nav-link text-white" asp-area="" asp-controller="" asp-action="">View Employee Orders</a>
+</div>
+
+<h3>Menu</h3>
+
 <table class="table">
     <thead>
         <tr>
@@ -22,20 +29,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DrinkName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DrinkCost)
-            </td>
-            <td>
-                <a asp-action="Upsert" asp-route-id="@item.DrinkId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DrinkId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.DrinkId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DrinkName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DrinkCost)
+                </td>
+                <td>
+                    <a asp-action="Upsert" asp-route-id="@item.DrinkId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.DrinkId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.DrinkId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
