--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Menu.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Menu.cshtml
@@ -9,6 +9,9 @@
 <p>
     <!-- <a asp-action="Home">Order Drink</a>-->
 </p>
+<div class="btn btn-success">
+    <a class="nav-link text-white" asp-area="" asp-controller="" asp-action="">Order Drinks</a>
+</div>
 <table class="table">
     <thead>
         <tr>
