--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Shared/_Layout.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - IS_BartenderAppProject_MV - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - IS_BartenderAppProject_MV 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
