--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
@@ -11,7 +11,11 @@
 </div>
 
 <div class="btn btn-success">
-    <a class="nav-link text-white" asp-area="" asp-controller="" asp-action="">View Employee Orders</a>
+    <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Index">View Employee Orders</a>
+</div>
+
+<div class="btn btn-secondary">
+    <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Create">Add Drink for Employee</a>
 </div>
 
 <h3>Menu</h3>
