--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Menu.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Menu.cshtml
@@ -10,7 +10,7 @@
     <!-- <a asp-action="Home">Order Drink</a>-->
 </p>
 <div class="btn btn-success">
-    <a class="nav-link text-white" asp-area="" asp-controller="" asp-action="">Order Drinks</a>
+    <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Create">Order Drinks</a>
 </div>
 <table class="table">
     <thead>
