Added titles to upsert page based on value of the Id. Added additional buttons for navigation, Added Confirmation page.

--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
@@ -15,7 +15,7 @@
 </div>
 
 <div class="btn btn-secondary">
-    <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Create">Add Drink for Employee</a>
+    <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Create">Add Drink for Customer</a>
 </div>
 
 <h3>Menu</h3>
