--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Upsert.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Upsert.cshtml
@@ -2,15 +2,20 @@
 
 @{
     ViewData["Title"] = "Create";
+    var title = "Add Drink";
 }
 
-<h1>Create</h1>
 
-<h4>Drink</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Upsert">
+            @if (Model.DrinkId != 0)
+            {
+                title = "Edit Existing Drink From Menu";
+            }
+            <h2>@title</h2>
             <input type="hidden" asp-for="DrinkId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
