--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Index.cshtml
@@ -5,8 +5,9 @@
 
 <h1>Orders Placed</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
+<p><div class="btn btn-secondary">
+       <a class="nav-link text-white" asp-action="Create">Add Drink for Customer</a>
+    </div>
 </p>
 <table class="table">
     <thead>
