--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Delete.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Drink</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this item from the menu?</h3>
 <div>
     <h4>Drink</h4>
     <hr />
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="DrinkId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete Menu Item" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
