--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Home/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Home/Index.cshtml
@@ -2,12 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">Welcome to Moe's Bar! </h1>
-        <div class="btn btn-primary">
-            <a class="nav-link text-white" asp-area="" asp-controller="Drink" asp-action="Menu">View Drinks Menu</a>
-        </div>
-        <div class="btn btn-success">
-            <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Create">Order Drinks</a>
-        </div>
+
+<div class="text-center">
+    <h1 class="display-4">Welcome to Moe's Bar! </h1>
+    <div class="btn btn-primary">
+        <a class="nav-link text-white" asp-area="" asp-controller="Drink" asp-action="Menu">View Menu</a>
     </div>
+    <div class="btn btn-success">
+        <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Create">Order Drinks</a>
+    </div>
+    <div>
+        <img class="barimage img-thumbnail" src="~/images/bar image.jpeg">
+    </div>
+</div>
+
+<link rel="stylesheet" href="~/css/site.css">
+
+
