--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Create.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Create.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Submit Order" class="btn btn-success" />
             </div>
         </form>
     </div>
