--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Delete.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Delete.cshtml
@@ -6,7 +6,8 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to remove this order?</h3>
+<h4>Only do so if order is completed or cannot be completed</h4>
 <div>
     <h4>Order</h4>
     <hr />
@@ -39,7 +40,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="OrderId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Remove Order" class="btn btn-warning" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
