--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Drink/Index.cshtml
@@ -11,7 +11,7 @@
 </div>
 
 <div class="btn btn-success">
-    <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Index">View Employee Orders</a>
+    <a class="nav-link text-white" asp-area="" asp-controller="Orders" asp-action="Index">View Customer Orders</a>
 </div>
 
 <div class="btn btn-secondary">
