--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Home/Index.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Moe's Bar! </h1>
+    <h1 class="display-4">Welcome to Merv's Bar! </h1>
     <div class="btn btn-primary">
         <a class="nav-link text-white" asp-area="" asp-controller="Drink" asp-action="Menu">View Menu</a>
     </div>
