--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Create.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TableNum" class="control-label"></label>
-                <input asp-for="TableNum" class="form-control" />
+                <input asp-for="TableNum" class="form-control" min="0"/>
                 <span asp-validation-for="TableNum" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
+                <input asp-for="Quantity" class="form-control"  min="0" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
