--- a/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Edit.cshtml
+++ b/IS_BartenderAppProject_MV/IS_BartenderAppProject_MV/Views/Orders/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TableNum" class="control-label"></label>
-                <input asp-for="TableNum" class="form-control" />
+                <input asp-for="TableNum" class="form-control" min="0"/>
                 <span asp-validation-for="TableNum" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,8 +30,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
+                <input asp-for="Quantity" class="form-control" min="0"/>
+                <span asp-validation-for="Quantity" class="text-danger" ></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
